Fixed all clipping issues

--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -27,7 +27,7 @@
 
 @media only screen and (max-width: 800px) {
   .self-description p {
-    font-size: 15px;
+    font-size: 20px;
   }
   .skills-set {
     font-size: 12px;
