--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -68,7 +68,7 @@
   padding: 20px;
 }
 
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 760px) {
   .homepage {
     padding-top: 0px;
     height: 100%;
