--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -10,7 +10,7 @@
   justify-content: space-around;
 }
 
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 760px) {
   .portfoliopage {
     height: 100%;
   }
