--- a/src/index.css
+++ b/src/index.css
@@ -48,7 +48,7 @@ li {
   flex-direction: row;
 }
 
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 760px) {
   .content {
     flex-direction: column;
   }
